# stock-mcp

./: .gitignore  Dockerfile  GEMINI.md  LICENSE  README.md  current_deps.json  main.py  pyproject.toml  test_mcp_client.py
src/data/: cache.py  yfinance_client.py
src/mcp/: server.py  tools.py
src/services/: delayed_price_service.py  stock_service.py
src/utils/: exceptions.py  formatting.py  logging_setup.py  tracing.py  validation.py
tests/: test_analysis.py  test_mcp_client.py  test_stock_service.py  test_validation.py  test_yfinance_client.py
