[project]
name = "stock-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.26.0",
    "pydantic>=2.12.5",
    "ruff>=0.15.7",
    "yfinance>=1.2.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "SIM", "TCH"]
ignore = ["D100", "D104"]

[tool.ruff.lint.isort]
known-first-party = ["src"]
